[tool.poetry]
name = "tmlt.core"
version = "0.1.1"
description = "Tumult's differential privacy primitives"
readme = "README.md"
authors = []

include = [
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "test_requirements.txt", format = "sdist" },
    { path = "doc/", format = "sdist" },
    { path = "examples/", format = "sdist" },
    { path = "benchmark/", format = "sdist" },
    { path = "test/", format = "sdist" },
]
packages = [
    { include = "tmlt" },
]

[tool.poetry.dependencies]
python = "^3.7.1"

numpy = "^1.18.0,<1.19.5"
pandas = "^1.2.0"
pyarrow = "^2.0.0"
pyspark = { version = "^3.0.0,<3.1.0", extras = ["sql"] }
randomgen = "^1.18.1"
typeguard = "^2.12.1,<2.13.0"
scipy = "^1.4.1,<1.6.1"
sympy = "^1.8,<1.10"
typing_extensions = "^3.10.0.0"

[tool.poetry.dev-dependencies]
# Linters, formatters
black = "21.9b0"
isort = "4.3.21"
mypy = "0.940"
pylint = "2.5.3"
pydocstyle = "6.1.1"

# CI, testing, docs
coverage = "^5.1"
nose = "^1.3.7"
pandoc = "^1.0.2"
parameterized = "^0.7.4"
scanpydoc = "0.7.3" # 0.7.4 doesn't work
sphinx = "^4.3.0"
sphinx-autoapi = "^1.7.0"
sphinx-autodoc-typehints = "1.12.0" # 1.13.0 doesn't work https://gitlab.com/tumult-labs/tumult/-/issues/1565
sphinx-copybutton = "^0.4.0"
# A patch is needed that wasn't merged until after the last release, so for now
# just use a version on https://github.com/Holzhaus/sphinx-multiversion/tree/master
sphinx-multiversion = {git = "https://github.com/Holzhaus/sphinx-multiversion.git", rev = "cdc9cb591a738e67a5aacc458f9c95e2b88a94c2"}
sphinx-tabs = "^3.2.0"
sphinxcontrib-bibtex = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"
pydata-sphinx-theme = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88


[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true


[tool.pylint.master]
# See https://github.com/PyCQA/pylint/issues/1975#issuecomment-387924981
extension-pkg-whitelist = ['numpy']
load-plugins = ['pylint.extensions.docparams']
# Only check param docs in docstrings that contain an Args: section.
# Set to "no" to show docstrings missing argument documentation.
accept-no-param-doc = true

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'arguments-differ',
    'bad-continuation',
    'duplicate-code',
    'fixme',
    'invalid-name',
    'logging-format-interpolation',
    'logging-fstring-interpolation',
    'missing-raises-doc',
    'missing-return-doc',
    'no-else-return',
    'super-init-not-called',
    'too-few-public-methods',
    'too-many-ancestors',
    'too-many-arguments',
    'too-many-branches',
    'too-many-instance-attributes',
    'too-many-lines',
    'too-many-locals',
    'too-many-public-methods',
    'too-many-return-statements',
    'too-many-statements',
    'unbalanced-tuple-unpacking',
    'wrong-import-order',
]

[tool.pylint.FORMAT]
max-line-length = 88


[tool.pydocstyle]
convention = "google"
add-ignore = [
    # `D200: One-line docstring should fit on one line with quotes`
    # conflicts with pylint's `max-line-length`.
    "D200"
]